fix styling on small devices

--- a/www/css/site.scss
+++ b/www/css/site.scss
@@ -46,7 +46,7 @@ code {
     }
     @media(max-width:45em) {
         margin-top: -1em;
-        font-size: 1.3em;
+        font-size: 1em;
     }
 }
 
